add JS sample code to HTML to test embedded JS

--- a/code-samples/html.html
+++ b/code-samples/html.html
@@ -13,4 +13,30 @@
         <p class="smiley">Smiley face: &#128540;</p>
         <div></div>
     </body>
+    <script>
+        /*
+         a long comment
+        */
+        // this is a comment
+        function myFunction(param, param) {
+            if (a === true) {
+                param.doThing(true);
+            }
+            return 1234;
+        }
+        export class MyClass {
+            constructor() {
+                this.asdfasdf = "a string" + 'a';
+            }
+            async doSomething() {
+                return (a, b) => a + b;
+            }
+        }
+        await c.doSomething(c.data);
+        let c = new MyClass();
+        var template = tag`asdfasdf${myFunction()}`;
+        const regex = /\<[a-zA-Z]+\>/g;
+        console.log(template);
+
+    </script>
 </html>
